# reimagined-guide

./: .dockerignore  .env.test  .gitignore  Cargo.toml  DOCKER-ENV-GUIDE.md  Dockerfile  INSTALL.md  LICENSE  README-Docker.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  env.example  test-smtp
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
imap_server/: Cargo.toml
scripts/: docker-env.sh  init-mongo.js
src/: entities.rs  lib.rs  main.rs  smtp_client.rs
src/auth/: email_auth.rs  mod.rs
src/imap_server/: mod.rs
src/logic/: mod.rs
src/session/: mod.rs
src/smtp_client/: mod.rs
