[package]
name = "simple-smtp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full", "tracing"] }
tokio-rustls = "0.26.0"
rustls-pemfile = "2.0"
webpki-roots = "0.25.2"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.1.5"
dotenv = "0.15.0"
base64 = "0.22.1"
mailparse = "0.15.0"

[dev-dependencies]
tempfile = "3.2"