[package]
name = "simple-smtp-server"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "smtp_server"
path = "src/bin/smtp_server.rs"

[[bin]]
name = "email_api"
path = "src/bin/email_api.rs"

[[bin]]
name = "imap_server"
path = "src/bin/imap_server.rs"

[lib]
name = "simple_smtp_server"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4.3", features = ["openssl"] }
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-rustls = "0.26.0"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
webpki-roots = "0.25.2"
trust-dns-resolver = "0.23.2"
clap = "3.0"
reqwest = { version = "0.11", features = ["json"] }
actix-cors = "0.7.0"

log = "0.4.22"
env_logger = "0.11.5"
rustls-native-certs = "0.6.2"

rustls-pemfile = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.1.5"
dotenv = "0.15.0"
base64 = "0.22.1"
mailparse = "0.15.0"
lettre = "0.11.8"
pem = "3.0.4"
tempfile = "3.2"
lazy_static = "1.4.0"
constant_time_eq = "0.3.1" 

mongodb = { version = "2.0", features = ["tokio-runtime"] }
futures-util = "0.3.31"
warp = "0.3.7"

chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.83"
jsonwebtoken = "7.2"
uuid = "1.11.0"

[dev-dependencies]
mockall = "0.11.0"
tokio = { version = "1", features = ["full", "test-util"] }